force-app/main/default/objects/Lead/fields/AI_Candidate_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Candidate_Summary__c</fullName>
    <description>Claude-generated candidate summary. Written by Make scenario Lead Summary v1. Do not edit manually.</description>
    <inlineHelpText>Populated automatically. See AI_Prompt_Version__c for the prompt that generated this summary.</inlineHelpText>
    <label>AI Candidate Summary</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>