force-app/main/default/objects/Lead/fields/AI_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>AI_Last_Updated__c</fullName>
    <description>Timestamp of last Claude summary write.</description>
    <label>AI Last Updated</label>
    <type>DateTime</type>
</CustomField>