force-app/main/default/objects/Lead/fields/AI_Prompt_Version__c.field-meta.xml
<CustomField>
    <fullName>AI_Prompt_Version__c</fullName>
    <description>Version tag of the prompt used to generate the summary, e.g., v2026-04-19-a</description>
    <label>AI Prompt Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>