force-app/main/default/objects/Lead/fields/AI_Status__c.field-meta.xml
<CustomField>
    <fullName>AI_Status__c</fullName>
    <description>State of the Claude-driven triage summary for this Lead. Blank = not yet processed. Generated = summary ready. Failed = Claude API error, see AI Integration Logs. Skipped = Lead missing required inputs (Job_Title__c / Region__c).</description>
    <inlineHelpText>Blank means not yet processed. If Failed, contact the admin with this Lead Id so they can review the AI Integration Logs.</inlineHelpText>
    <label>AI Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generated</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>