force-app/main/default/objects/Lead/fields/Availability_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Availability_Weeks__c</fullName>
    <description>Weeks until the applicant can start. Typically matches notice period with current employer.</description>
    <label>Availability (Weeks)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>