force-app/main/default/objects/Lead/fields/German_Level__c.field-meta.xml
<CustomField>
    <fullName>German_Level__c</fullName>
    <description>Self-reported German language proficiency. Key signal for SME employers preferring native or near-native speakers.</description>
    <label>German Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Native</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>