force-app/main/default/objects/Lead/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>The job title the applicant applied for. Source of truth for the Claude triage prompt.</description>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>