force-app/main/default/objects/Lead/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>The regional portal the applicant came from. Primary regional-fit signal for the Claude triage prompt.</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oberland</fullName>
            </value>
            <value>
                <fullName>Bodensee</fullName>
            </value>
            <value>
                <fullName>Schwarzwald</fullName>
            </value>
            <value>
                <fullName>Allgaeu</fullName>
            </value>
            <value>
                <fullName>Baden</fullName>
            </value>
            <value>
                <fullName>Ulm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>