force-app/main/default/objects/Lead/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <description>Applicant-reported skills, technologies, certifications. Comma or newline separated.</description>
    <label>Skills</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>