force-app/main/default/objects/Lead/fields/Years_Experience__c.field-meta.xml
<CustomField>
    <fullName>Years_Experience__c</fullName>
    <description>Total years of relevant professional experience self-reported by the applicant.</description>
    <label>Years Experience</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>